# analysis-auto

./: Cargo.toml  README.md
src/: auto_analyzer.rs  detect.rs  lib.rs  register.rs
tests/: auto_comprehensive.rs
